@@ -10,3 +10,4 @@ pypi or custom url
 25-Oct-2010: when creating the project creating templates dir
 25-Oct-2010: adding base templates base.html, 404.html, 500.html
 25-Oct-2010: updating templates
+05-Nov-2010: adding urls into projects and logs directory
